v0.14.1/_sources/gallery/lines/wiggle.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines/wiggle.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_lines_wiggle.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_wiggle.py:


Wiggle along tracks
===================

The :meth:`pygmt.Figure.wiggle` method can plot z = f(x,y) anomalies along
tracks. ``x``, ``y``, ``z`` can be specified as 1-D arrays or within a
specified file. The ``scale`` parameter can be used to set the scale of the
anomaly in data/distance units. The positive and/or negative areas can be
filled with color by setting the ``fillpositive`` and/or ``fillnegative``
parameters.

.. GENERATED FROM PYTHON SOURCE LINES 14-43



.. image-sg:: /gallery/lines/images/sphx_glr_wiggle_001.png
   :alt: wiggle
   :srcset: /gallery/lines/images/sphx_glr_wiggle_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import numpy as np
    import pygmt

    # Create (x, y, z) triplets
    x = np.arange(-7, 7, 0.1)
    y = np.zeros(x.size)
    z = 50 * np.exp(-((x / 3) ** 2)) * np.cos(2 * np.pi * x)

    fig = pygmt.Figure()
    fig.basemap(region=[-8, 12, -1, 1], projection="X10c", frame=["Snlr", "xa2f1"])
    fig.wiggle(
        x=x,
        y=y,
        z=z,
        # Set anomaly scale to 20 centimeters
        scale="20c",
        # Fill positive areas red
        fillpositive="red",
        # Fill negative areas gray
        fillnegative="gray",
        # Set the outline width to 1.0 point
        pen="1.0p",
        # Draw a blue track with a width of 0.5 points
        track="0.5p,blue",
        # Plot a vertical scale bar at Middle Right (MR). The bar length (+w)
        # is 100 in data (z) units. Set the z unit label (+l) to "nT".
        position="jMR+w100+lnT",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.134 seconds)


.. _sphx_glr_download_gallery_lines_wiggle.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: wiggle.ipynb <wiggle.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: wiggle.py <wiggle.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: wiggle.zip <wiggle.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
