v0.19.0/_sources/gallery/lines/wiggle.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines/wiggle.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_lines_wiggle.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_wiggle.py:


Wiggle along tracks
===================

The :meth:`pygmt.Figure.wiggle` method can plot z = f(x,y) anomalies along tracks.
``x``, ``y``, ``z`` can be specified as 1-D arrays or within a specified file. The
``scale`` parameter can be used to set the scale of the anomaly in data/distance units.
The positive and/or negative areas can be filled with color by setting the
``positive_fill`` and/or ``negative_fill`` parameters.

.. GENERATED FROM PYTHON SOURCE LINES 13-42



.. image-sg:: /gallery/lines/images/sphx_glr_wiggle_001.png
   :alt: wiggle
   :srcset: /gallery/lines/images/sphx_glr_wiggle_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import numpy as np
    import pygmt
    from pygmt.params import Axis, Frame, Position

    # Create (x, y, z) triplets
    x = np.arange(-7, 7, 0.1)
    y = np.zeros(x.size)
    z = 50 * np.exp(-((x / 3) ** 2)) * np.cos(2 * np.pi * x)

    fig = pygmt.Figure()
    fig.basemap(
        region=[-8, 12, -1, 1],
        projection="X10c",
        frame=Frame(axes="Snlr", xaxis=Axis(annot=2, tick=1)),
    )
    fig.wiggle(
        x=x,
        y=y,
        z=z,
        scale="20c",  # Set anomaly scale to 20 centimeters
        positive_fill="red",  # Fill positive areas red
        negative_fill="gray",  # Fill negative areas gray
        pen="1.0p",  # Set the outline width to 1.0 point
        track="0.5p,blue",  # Draw a blue track with a width of 0.5 points
        position=Position("MR"),  # Plot a vertical scale bar at Middle Right (MR).
        length=100,  # Bar length is 100 in data (z) units.
        label="nT",  # Set the z unit label to "nT".
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.123 seconds)


.. _sphx_glr_download_gallery_lines_wiggle.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: wiggle.ipynb <wiggle.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: wiggle.py <wiggle.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: wiggle.zip <wiggle.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
